--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-less": "^2.0.0",
     "grunt-eslint": "^22.0.0",
     "grunt-htmlhint": "^0.9.13",
+    "grunt-mocha-cli": "^6.0.0",
     "grunt-mocha-istanbul": "^5.0.2",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.0"
